# gamepad-raw-input

./: CMakeLists.txt  gamepad_raw_input_win.cpp  hid_dll_functions_win.cpp  main.cpp
GamepadWindow/: GamepadWindow.sln
GamepadWindow/GamepadWindow/: GamepadWindow.aps  GamepadWindow.cpp  GamepadWindow.rc  GamepadWindow.vcxproj  GamepadWindow.vcxproj.filters  Resource.h
include/: gamepad_raw_input_win.h  hid_dll_functions_win.h
